--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -19,7 +19,7 @@
         <button id="scroll-left" class="scroll-button">&lt;</button>
         <div class="kanban-board">
             {% for column in columns %}
-            <div class="kanban-column" data-column-id="{{ column.id }}">
+            <div class="kanban-column" data-column-id="{{ column.id }}" data-column-name="{{ column.name }}">
                 <button class="kanban-column-header">{{ column.name }}</button>
                 <div class="kanban-column-body">
                     {% for task in tasks %}
@@ -50,7 +50,7 @@
                             <button class="btn btn-danger delete-task-btn">Delete</button>
                             <button class="btn btn-secondary close-task-btn">Close</button>
                             <button class="btn btn-info move-task-btn">Move</button>
-                            <select class="move-task-dropdown">
+                            <select class="move-task-dropdown" style="display:none;">
                                 {% for column in columns %}
                                 <option value="{{ column.id }}">{{ column.name }}</option>
                                 {% endfor %}
@@ -181,6 +181,7 @@
 <script src="{% static 'js/kanban.js' %}"></script>
 <script src="{% static 'js/kanban_custom.js' %}"></script>
 {% endblock %}
+
 
 
 
