notification show up bau only after a refresh the page

--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -180,6 +180,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{% static 'js/kanban.js' %}"></script>
 <script src="{% static 'js/kanban_custom.js' %}"></script>
+<script src="{% static 'js/notifications.js' %}"></script>
 {% endblock %}
 
 
