--- a/templates/base.html
+++ b/templates/base.html
@@ -216,13 +216,18 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
+    <div id="loadingSpinner" style="display: none;">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/compressorjs@1.0.7/dist/compressor.min.js"></script>
     <script src="{% static 'js/profile.js' %}"></script>
     <script src="{% static 'js/dark_mode.js' %}"></script>
-    <script src="{% static 'js/notifications.js' %}"></script> <!-- Include the notifications JS -->
+    <script src="{% static 'js/notifications.js' %}"></script> 
     {% block extra_js %}{% endblock %}
 </body>
 </html>
