--- a/static/css/kanban.css
+++ b/static/css/kanban.css
@@ -14,6 +14,7 @@ body {
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
+   
 }
 
 .kanban-board-wrapper {
@@ -71,6 +72,7 @@ body {
 .kanban-task-title {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-weight: bold;
 }
 
@@ -78,7 +80,7 @@ body {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .priority-low {
@@ -350,3 +352,4 @@ body {
         display: none;
     }
 }
+
