--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'js/auth_notifications.js' %}"></script>
+    <script src="{% static 'js/notifications.js' %}"></script>
 </body>
 </html>
 
