--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,28 +48,28 @@ body {
 
 /* Avatar and profile images */
 .navbar-avatar, .profile-avatar {
-    border-radius: 50%; /* Make the image a circle */
-    object-fit: cover; /* Ensure the image covers the area without distortion */
+    border-radius: 50%; 
+    object-fit: cover; 
 }
 
 .navbar-avatar {
-    width: 40px; /* Adjust size as needed */
-    height: 40px; /* Ensure width and height are the same */
+    width: 40px; 
+    height: 40px; 
 }
 
 /* Larger profile avatar in profile modal */
 .profile-avatar {
-    width: 100px; /* Adjust size as needed */
-    height: 100px; /* Ensure width and height are the same */
+    width: 100px;
+    height: 100px;
 }
 
 /* Static styles */
 #messages {
     position: fixed;
-    top: 70px; /* Adjust this value if your navbar height is different */
+    top: 70px; 
     right: 10px;
     width: auto;
-    z-index: 1060; /* Ensure this is higher than the navbar's z-index and other elements */
+    z-index: 1060;
 }
 
 .alert {
@@ -101,5 +101,19 @@ body {
     border-radius: 50%; 
     object-fit: cover; 
 }
+.list-group-item {
+    background-color: transparent !important;
+    border: none !important;
+}
 
+.kanban-task-title {
+    color: #fff; 
+}
 
+.priority-done {
+    background: url("/static/images/apple-touch-icon.png") no-repeat center center;
+    background-size: contain;
+    width: 20px;
+    height: 20px; 
+    display: inline-block;
+}
