--- a/staticfiles/css/kanban.css
+++ b/staticfiles/css/kanban.css
@@ -14,6 +14,7 @@ body {
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
+   
 }
 
 .kanban-board-wrapper {
@@ -29,7 +30,7 @@ body {
 }
 
 .kanban-column {
-    background-color: #f4f4f4;
+    background-color: rgba(244, 244, 244, 0.8); 
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -39,6 +40,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 
 .kanban-column-header {
     font-weight: bold;
@@ -71,6 +73,7 @@ body {
 .kanban-task-title {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-weight: bold;
 }
 
@@ -78,7 +81,7 @@ body {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .priority-low {
@@ -109,7 +112,7 @@ body {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1000;
+    z-index: 1050;
     left: 0;
     top: 0;
     width: 100%;
@@ -192,25 +195,6 @@ body {
     margin-right: 5px;
 }
 
-.notification {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: #fff;
-    font-weight: bold;
-    z-index: 1000;
-}
-
-.notification.success {
-    background-color: #4CAF50; /* Green */
-}
-
-.notification.error {
-    background-color: #f44336; /* Red */
-}
-
 .unclickable {
     pointer-events: none;
     cursor: default;
@@ -277,6 +261,7 @@ body {
     border-radius: 5px;
     margin-right: 5px;
 }
+
 /* Media query for small devices */
 @media (max-width: 600px) {
     .kanban-board-wrapper {
@@ -368,3 +353,4 @@ body {
         display: none;
     }
 }
+
