--- a/static/css/kanban.css
+++ b/static/css/kanban.css
@@ -77,8 +77,8 @@ body {
 }
 
 .priority-indicator {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     margin-left: 5px;
 }
@@ -128,6 +128,10 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     width: 400px;
+}
+
+.modal-content .form-group.mb-3 {
+    margin-bottom: 15px;
 }
 
 .close-btn {
@@ -260,6 +264,21 @@ body {
     border-radius: 5px;
     margin-right: 5px;
 }
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.button-container .btn {
+    width: 200px; /* Adjust the width as needed */
+    height: auto; /* Ensure the height does not increase */
+    font-size: 1em; /* Maintain a reasonable font size */
+}
+
+
+
 
 /* Media query for small devices */
 @media (max-width: 600px) {
@@ -352,5 +371,6 @@ body {
         display: none;
     }
 }
+
 
 
