--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -50,9 +50,9 @@
                             <button class="btn btn-danger delete-task-btn">Delete</button>
                             <button class="btn btn-secondary close-task-btn">Close</button>
                             <button class="btn btn-info move-task-btn">Move</button>
-                            <select class="move-task-dropdown" style="display:none;">
+                            <select class="move-task-dropdown">
                                 {% for column in columns %}
-                                <option value="{{ column.id }}">{{ column.name }}</option>
+                                <option value="{{ column.id }}" {% if column.id == task.column.id %}selected{% endif %}>{{ column.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
