--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -204,6 +204,7 @@
 <script src="{% static 'js/kanban.js' %}"></script>
 <script src="{% static 'js/kanban_custom.js' %}"></script>
 <script src="{% static 'js/notifications.js' %}"></script>
+<script src="{% static 'js/mobile.js' %}"></script>
 {% endblock %}
 
 
